# epylog

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.in  README  README.md  compiledir.in  configure.in  epylog  epylog.in  epylog.spec
cron/: Makefile.in  epylog-cron.daily  epylog.cron.in
doc/: AUTHORS  ChangeLog  README  modules.txt  roadmap.txt
doc/templates/: template.mod.pl  template_mod.py
doc/testcase/: logins.testcase  mail.testcase  notices.testcase  packets.testcase  spamd.testcase  weeder.testcase
etc/: Makefile.in  epylog.conf  epylog.conf.in  notice_dist.xml  notice_local.xml  report_template.html  trojans.list  weed.list  weed_dist.cf  weed_local.cf
etc/modules.d/: Makefile.in  annoy.conf  firewalls.conf  imp.conf  logins.conf  logins.conf.in  mail.conf  mail.conf.in  notices.conf  notices.conf.in  packets.conf  packets.conf.in  reboots.conf  spamd.conf  spamd.conf.in  weedeater.conf  weeder.conf  weeder.conf.in
man/: Makefile.in  epylog-modules.5  epylog.8  epylog.conf.5
modules/: Makefile.in  annoy.mod.pl  annoy_mod.py  dovecot_mod.py  firewall.mod.pl  imp.mod.pl  logins.mod.pl  logins_mod.py  mail.mod.pl  mail_mod.py  notices_mod.py  packets_mod.py  reboots.mod.pl  reboots_mod.py  spamd_mod.py  template.mod.pl  template_mod.py  weedeater.mod.sh  weeder_mod.py
perl/: Makefile.in  epylog.pm
py/: Makefile.in
py/epylog/: __init__.py  helpers.py  log.py  module.py  mytempfile.py  publishers.py  report.py
